--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,17 @@
-<h1>Joshua Keith Pearson</h1>
+<section id="hero"></section>
+
+<section id="information">
+  <section id="reviews">
+    <h4>DMC Delorean Reviews</h4>
+    <ul>
+      <li>"So fast it's almost like traveling in time." (4/5)</li>
+      <li>"Coolest ride on the road." (4/5)</li>
+      <li>"I'm feeling McFly!" (5/5)</li>
+      <li>"The most futuristic ride of our day." (4.5/5)</li>
+      <li>"80's livin and I love it!" (5/5)</li>
+    </ul>
+  </section>
+  <section id="upgrades">
+    <h4>Delorean Upgrades</h4>
+  </section>
+</section>
