--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -2,18 +2,27 @@
 
 @media screen and (min-width: 768px) {
   #wrapper {
-    max-width: 50%;
+    max-width: 512px;
+    min-width: 768px;
     padding: 1rem;
     margin: 2rem auto 2rem;
     min-height: 90vh;
-    border-radius: 1rem;
-    border: var(--primary-700) solid 0.25rem;
+    border-radius: 0.75rem;
+    border: var(--primary-300) solid 0.25rem;
   }
 
   #information {
     display: flex;
-    justify-content: space-around;
     flex-direction: row-reverse;
     margin-bottom: 1rem;
+  }
+
+  #heroImgWrapper {
+    width: 70%;
+  }
+
+  #floaterCTA {
+    top: 2rem;
+    left: 2rem;
   }
 }
