--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,7 @@
   --primary-600: #2c5491;
   --primary-700: #1e3f63;
   --primary-800: #102b35;
-  --primary-900: #050e16;
+  --primary-900: white;
   --secondary-100: #e9ece9;
   --secondary-200: #d4d9d4;
   --secondary-300: #bfc5bf;
@@ -34,19 +34,70 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  background-color: var(--primary-900);
   margin: 0;
   padding: 0;
   min-height: 100vh;
   width: auto;
+  background-image: url("../images/site/checkerboard.jpg");
+  background-size: 25rem 25rem;
+  background-repeat: repeat;
+  color: var(--text-900);
+}
+
+nav {
   color: var(--text-100);
 }
 
 #wrapper {
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(var(--primary-800), var(--primary-900));
+  background-color: var(--text-100);
+  padding: 0.5rem;
   min-height: 100vh;
+}
+
+#hero {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+#heroImgWrapper {
+  width: 90%;
+}
+
+#heroImgWrapper > img {
+  width: 100%;
+}
+
+#floaterCTA {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  left: 0;
+  padding-right: 1rem;
+  color: var(--text-600);
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 0.5rem;
+}
+
+#floaterCTA > ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  align-self: left;
+}
+
+#ctaImg {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 1rem 0 0 0;
+  height: 3rem;
+}
+
+#ctaImg > img {
+  height: 100%;
 }
 
 h1 {
@@ -74,7 +125,6 @@ h4 {
 }
 
 p,
-a,
 li,
 ul {
   margin: 0;
@@ -83,10 +133,41 @@ ul {
   inset: none;
   padding-left: 0;
   color: inherit;
+  font-size: 0.9rem;
 }
 
 a {
-  color: var(--text-400);
+  color: var(--text-600);
+}
+
+/******* Utility Classes *******/
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.underline-none {
+  text-decoration: none;
+}
+
+.flex {
+  display: flex;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.align-center {
+  align-items: center;
 }
 
 /******* Mobile View ***************/
@@ -95,13 +176,13 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 4rem;
-  text-decoration: none;
+  height: 3rem;
 }
 
 #top-header > .siteName {
-  font-size: 1.5rem;
-  font-weight: 300;
+  font-size: 1.75rem;
+  font-weight: 100;
+  margin-bottom: 1rem;
 }
 
 #top-header > #tools {
@@ -115,8 +196,8 @@ nav {
 
 nav > ul {
   display: flex;
-  justify-content: space-between;
-  height: 3rem;
+  justify-content: space-around;
+  height: 2rem;
   align-items: center;
   padding: 0 1rem 0 1rem;
   margin: 0;
@@ -124,5 +205,64 @@ nav > ul {
 }
 
 main {
+  flex-grow: 1;
+}
+
+#information {
+  padding-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#reviews {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#reviews > ul {
+  list-style-type: circle;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin: 0;
+  padding: 0;
+}
+
+#upgrades {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+#upgradeItems {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0.5rem;
+}
+
+#upgradeItems > li {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0.5rem;
+  gap: 0.25rem;
+}
+
+#upgradeImgWrapper {
+  display: flex;
+  background-color: var(--primary-300);
+  padding: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  min-height: 6rem;
+}
+
+#upgradeItems > li > img {
+  object-fit: cover;
+  width: 100%;
   flex-grow: 1;
 }
