--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,12 @@
 <header id="top-header">
-    <span class="siteName">
-      <a href="/" title="Return to home page">CSE Motors</a>
-    </span>
-    <div id="tools">
-      <a title="Click to log in" href="/account/login">My Account</a>
-    </div>
+  <span class="siteName">
+    <a href="/" title="Return to home page" class="underline-none"
+      >CSE Motors</a
+    >
+  </span>
+  <div id="tools">
+    <a title="Click to log in" href="/account/login" class="underline-none"
+      >My Account</a
+    >
+  </div>
 </header>
