--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -125,6 +125,12 @@ h4 {
   margin: 0;
 }
 
+h5 {
+  font-size: 1rem;
+  font-weight: 300;
+  margin: 0;
+}
+
 p,
 li,
 ul {
@@ -314,4 +320,58 @@ main {
 .namePrice > span {
   text-align: center;
   color: var(--text-100);
+}
+
+#detailImage {
+  width: 100%;
+  background-color: var(--primary-800);
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  padding: 0.5rem;
+}
+
+#detailImageSubtitle {
+  text-align: center;
+  color: var(--text-400);
+  font-weight: 100;
+}
+
+#detailImage > img {
+  width: 100%;
+  border-radius: 0.5rem;
+  object-fit: cover;
+}
+
+#detailWrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+#detailInfoPanel {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#detailPriceBlock {
+  display: flex;
+  gap: 0.5rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--primary-800);
+  color: var(--text-100);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+}
+
+#detailDescriptionBlock {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  height: auto;
+  gap: 0.5rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
 }
