--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,5 @@
 <% const d = new Date() %> <% let year = d.getFullYear() %>
 <footer>
   <p class="copyright">&copy; Joshua Keith Pearson <%= year %>, CSE 340 App</p>
+  <a style="color: red" href="/err/500">Error Route</a>
 </footer>
