--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,6 +22,7 @@
   --text-400: #8cc5c7;
   --text-600: #52809d;
   --text-900: #0d1f31;
+  --text-error: #ec6060;
 }
 
 /******* Change Box Model ***************/
@@ -374,4 +375,77 @@ main {
   height: auto;
   gap: 0.5rem;
   padding: 0.5rem 1rem 0.5rem 1rem;
+}
+
+form {
+  display: flex;
+  width: 100%;
+  text-align: center;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+form > label {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+form > label > input {
+  padding: 0.25rem;
+  width: 60%;
+  background-color: var(--primary-800);
+  color: var(--text-100);
+  border: none;
+  border-bottom: var(--primary-500) 2px solid;
+}
+
+form > label > input:focus {
+  outline: none;
+  border-bottom: var(--primary-400) 2px solid;
+}
+
+form > button {
+  padding: 0.5rem;
+  background-color: var(--primary-500);
+  color: var(--text-100);
+  border: none;
+  margin: auto;
+  width: 50%;
+  border-radius: 0.5rem;
+}
+
+form > button:active {
+  background-color: var(--primary-700);
+  transform: translateY(2px);
+}
+
+.form-card {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  gap: 1rem;
+  text-align: end;
+  background-color: var(--primary-800);
+  color: var(--text-100);
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+#password-requirements {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+#password-requirements {
+  font-size: 1.5rem;
+  color: var(--text-400);
+}
+
+form > label > input:invalid:not(:placeholder-shown) {
+  color: var(--text-error);
+  border-bottom: var(--text-error) 2px dashed;
 }
