--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@ review: "80's livin and I love it!", rating: 5 }, ]; %>
 
 <section id="hero">
   <h2>Welcome to CSE Motors</h2>
+  <%- messages() %>
   <div class="relative flex justify-center">
     <div id="floaterCTA" class="absolute">
       <h3>DMC Delorean</h3>
