--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -3,6 +3,6 @@
 <h1 class="contentHeader"><%= title %></h1>
 <% } else { res.redirect('/') } %>
 <!-- message section -->
-<%# messages() %>
+<%- messages() %>
 <!-- items display -->
 <%- grid %>
