--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -451,9 +451,18 @@ form > button {
   border-radius: 0.5rem;
 }
 
-form > button:active {
+form > button:active:not(:disabled) {
   background-color: var(--primary-700);
   transform: translateY(2px);
+}
+
+form > button:disabled {
+  background-color: var(--primary-300);
+  color: var(--text-400);
+}
+
+form > button:disabled:active {
+  cursor: not-allowed;
 }
 
 .form-card {
@@ -540,4 +549,35 @@ form > label > select:invalid:not(:placeholder-shown) {
   background-color: var(--text-error);
   color: var(--text-100);
   border-radius: 0.5rem;
+}
+
+#manageInv {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#manageInv > select {
+  padding: 0.25rem;
+  width: 60%;
+  background-color: var(--primary-800);
+  color: var(--text-100);
+  border: none;
+  border-bottom: var(--primary-500) 2px solid;
+}
+
+#manageInv > table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th {
+  background-color: var(--primary-500);
+  color: var(--text-100);
+}
+
+th,
+td {
+  border: 1px solid var(--primary-500);
+  padding: 0.5rem;
 }
