--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -24,3 +24,10 @@
     <a href="/inv/add-inventory">Add new Vehicle</a>
   </div>
 </section>
+<section id="manageInv">
+  <h2>Manage Inventory</h2>
+  <%- classificationList %>
+  <table id="inventoryDisplay"></table>
+  <noscript>JavaScript must be enabled to use this page.</noscript>
+  <script src="../../js/inventory.js"></script>
+</section>
