--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -465,6 +465,11 @@ form > button:disabled:active {
   cursor: not-allowed;
 }
 
+.danger {
+  color: var(--text-error);
+  text-align: center;
+}
+
 .form-card {
   display: flex;
   flex-direction: column;
